--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,7 +37,7 @@ border: none;
 }
 </style>
 </head>
-<body style="background-image: url('background.png');">
+<body style="background-image: url('/static/background.png');">
 <center><h1 style=" color:white;  margin-top: 1px; border: 10px solid transparent; font-family:verdana;">Group-based Restaurant Recommendation System</h1></center>
 <center>
     <br/><br/><br/><br/><br/><br/><br/><br/>
